tests/auto/corelib/xml/qxmlstream/XML-Test-Suite/xmlconf/ibm/invalid/P32/ibm32i01.dtd
<!ATTLIST animal color CDATA #FIXED "yellow">